.scratch/ecosystem/research/kyverno-1.19-cage-diagnosis/verifier/minimal/mpol-skip/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-in
  namespace: default
  labels:
    caged: "true"
spec:
  containers:
  - name: app
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-out
  namespace: default
spec:
  containers:
  - name: app
    image: nginx
